style.css
#insertmessage{
    position:fixed;
    bottom:0px;
    left:0px;
    border-top:3px #FF0000 solid;
    width:100%;
    height: 3%;
    padding:8px;
    margin: 0px;
}
.mask{ 
    content: "";
    width:100%;
    height:100%;
    background-color:rgba(0, 0, 0, 0.5);
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    top:0;
    z-index: 2;
    /* display:none; */
} 
.window{
    background-color:#008899;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top:0;
    margin: auto;
    z-index: 2;
    /*display: none; */
}
#connectwindow{
    width:480px;
    height:200px;
}
#aboutwindow{
    width:480px;
    height:480px;
    display: none;
    text-align: center;
}
.t-center{
    text-align: center;
}
.exit-button{
    color:#FF0000;
    position: absolute;
    right:10px;
    top:10px;
    cursor: pointer;
}
#serversite{
    width: 400px;
    height:30px;
}
#tips-serversite{
    padding-left:40px;
}
#messageinput{
    width:80%;
    height:75%;
    margin: 0px;
}
#container{
    z-index: -1;
}
#about-cwcimg{
    width:240px;
    height:120px;
    text-align: center;
}
#iewindow{
    width:384px;
    height:256px;
    text-align: center;
    display: none;
}
#messagecontrol{
    overflow-x:scroll;
    overflow-y:scroll;
    width:100%;
    height:95%;
}
#mobwindow{
    text-align: center;
    display: none;
    padding: 16px;
}

